[package]
name = "revprox"
version = "0.1.0"
authors = ["Prateek Kumar <prateek@prateekkumar.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.4", features = ["full"] }
