[package]
name = "revprox"
version = "0.1.0"
authors = [ "Prateek Kumar <prateek@prateekkumar.in>" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
config = "0.11"
futures = "0.3"
futures-util = "0.3"
hyper = { version = "0.14", features = [ "full" ] }
lazy_static = "1.4"
serde = { version = "1.0", features = [ "derive" ] }
ssh2 = "0.9"
structopt = "0.3"
tokio = { version = "1.4", features = [ "full" ] }
tokio-rustls = "0.22"
tracing = "0.1"
tracing-subscriber = "0.2"
